--- a/.github/workflows/maven_master.yml
+++ b/.github/workflows/maven_master.yml
@@ -25,6 +25,8 @@ jobs:
     - name: Build with Maven
       run: mvn -B package --file pom.xml
       
+    - run: mkdir download && cp target/*.jar download
+
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v2.2.3
       with:
